updated theme comment

--- a/userChrome.css
+++ b/userChrome.css
@@ -1,8 +1,8 @@
 @namespace url('http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul');
 
-/* Intended to be used with this color scheme: 
+/* Intended to be used with this theme: 
 
-https://color.firefox.com/?theme=XQAAAAJUAQAAAAAAAABBqYhm849SCia48_6EGccwS-xMDPr79BBH6_4EpD24jBgjl6kvKSCXh41NOn6Dx5fR2q-a75GjEsvqfeU3VCj6w31W5eXvnSPrqPMCrtBu4dvYAJ4HJEbQ5PR6LKabjxMeCqo8aMtZBZuZ1NU_n0yAIvmiUoNsngm5b2WcT5zFMVsiSkeHdE-YluAjB0nBaIxF6fJVIu-yMdBQQEeyMC93_Kkuhv69kKhxBArVpLCywAtf2Y2Sis2qAb_V_SLQHNU9LTSSxkUr1uBJ3_rmAi9_yUk7IL1DRBAriIn_5KplwA 
+https://addons.mozilla.org/en-US/firefox/addon/dark-chromium-esque-theme/
 
 */
 
